--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+
+      <div class="spacer layer2"></div>
+
+        <section id="header">
           <p class="welcome">Hello! I'm Sean Wilcox, a Vancouver Washington-based web developer.</p>
           <p class="information">I focus on honing my problem-solving and development skills. Python, Django, CSS and HTML are what I'm most skilled in, but I also have experience with jQuery, Bootstrap, Node.js, Vue.js and VBA.<br>Like what you see? Contact me!</p>
-        </div>
-        <div class="card-container">
+        </section>
+
+      <div class="spacer layer1"></div>
+
+        <section id="card-container">
           <div class="card">
             <div class="name">Sean Wilcox</div>
             <hr>
@@ -33,33 +39,41 @@
               <span><i class="fab fa-instagram"></i></span>
             </a>
           </div>
-        </div>
-        <div class="portfolio-container">
+        </section>
+
+
+
+        <section id="portfolio-container">
+
           <div class="stand">
             <div class="portfolio">
               <a href="https://ecocompete.herokuapp.com/" target="_blank" class="portfolio-image"><img src="media\images\Ecocompete.JPG" alt="Under Construction"></a>
               <span>Ecocompete</span>
             </div>
           </div>
+
           <div class="stand">
             <div class="portfolio">
               <a href="https://codepen.io/Dutt1ez/full/GRrLMRj" target="_blank" class="portfolio-image"><img src="media\images\Timer.PNG" alt="Under Construction"></a>
               <span>Stopwatch app</span>
             </div>
           </div>
+
           <div class="stand">
             <div class="portfolio">
               <a href="https://codepen.io/Dutt1ez/full/GRreGgW" target="_blank" class="portfolio-image"><img src="media\images\ToDo.JPG" alt="Under Construction"></a>
               <span>To-do list app</span>
             </div>
           </div>
+
           <div class="stand">
             <div class="portfolio">
               <img src="media\images\under-construction.jpg" alt="Under Construction">
             </div>
           </div>
-        </div>
+
+        </section>
       </div>
-          </main>
+
 </body>
 </html>
